# HSI266_Project

./: .gitignore  CMakeLists.txt  README.md  main.c
docs/: main plan.txt  pinout.txt  timer and motor.txt  timer.txt
include/: constants.h  inputs.h  main.h  outputs.h
scripts/: data_upload.txt  init_upload.txt
src/: inputs.c  main.c  outputs.c
src/web/: index.html  index.js
